# t4c-world-engine_sdl3

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md  Readme.md  Symlinks_memory  data
TnC_dev/: CMakeLists.txt  FontManager  NPCList.txt  NPCManager  TextManager  VSFInterface  fonts  modif_sprites.txt  test_mapinterface_sdl3.cpp
TnC_dev/FontManager/: fontmanager.cpp  fontmanager.h
TnC_dev/MapInterface/: mapi_full_redraw.cpp  mapi_get_map.cpp  mapi_move_map.cpp
TnC_dev/NPCManager/: npc_ajout.cpp  npc_draw.cpp  npcmanager.cpp  npcmanager.h
TnC_dev/TextManager/: textmanager.cpp
TnC_dev/VSFInterface/: vsfi_indexage_pal.cpp  vsfi_read_sprite.cpp  vsfi_sprites.cpp  vsfinterface.h
TnC_dev/include/: tnc_sdl3.h
TnC_dev/render/: Sdl3FramePresenter.cpp  Sdl3FramePresenter.h
decode/: CMakeLists.txt  Game Files  id_list.txt.txt
scripts/: run_convert.sh  run_mapi_sdl3.sh
